--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   google_fonts: ^3.0.1
   http: ^0.13.5
+  image_picker: ^0.8.6
   intl: ^0.17.0
   url_launcher: ^6.1.6
 
